manual/v3.6.0/ja/html/_sources/filespecification/expertmode_ja/SingleExcitation_file_ja.rst.txt
.. highlight:: none

.. _Subsec:singleexcitation:

SingleExcitation指定ファイル
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

一体励起状態を作成するための演算子\ :math:`c_{i\sigma_1}(c_{i\sigma_1}^{\dagger})`\ を定義します。以下にファイル例を記載します。

::

    ===============================
    NSingle         24
    ===============================
    ======== Single Excitation ======
    ===============================
        0     0     0    1.0    0.0
        0     1     0    1.0    0.0
        1     0     0    1.0    0.0
       (continue...)
       11     0    0    1.0    0.0
       11     1    0    1.0    0.0

ファイル形式
^^^^^^^^^^^^

以下のように行数に応じ異なる形式をとります。

-  1行: ヘッダ(何が書かれても問題ありません)。

-  2行: [string01] [int01]

-  3-5行: ヘッダ(何が書かれても問題ありません)。

-  6行以降: [int02]  [int03]  [int04]  [double01]  [double02]

パラメータ
^^^^^^^^^^

-  :math:`[`\ string01\ :math:`]`

   **形式 :** string型 (空白不可)

   **説明 :** 一体励起演算子のキーワード名を指定します(任意)。

-  :math:`[`\ int01\ :math:`]`

   **形式 :** int型 (空白不可)

   **説明 :** 一体励起演算子の総数を指定します。

-  :math:`[`\ int02\ :math:`]`

   **形式 :** int型 (空白不可)

   **説明 :**
   サイト番号を指定する整数。0以上\ ``Nsite``\ 未満で指定します。

-  :math:`[`\ int03\ :math:`]`

   **形式 :** int型 (空白不可)

   | **説明 :** スピンを指定する整数。電子系・近藤格子系の場合は
   | 0: アップスピン、
   | 1: ダウンスピン、
   | スピン系の場合には、
   | :math:`0, 1, \cdots, 2S+1`
     (:math:`-S-0.5, -S+0.5, \cdots, S+0.5`\ に対応\ :math:`)`
   | を選択することが出来ます。

-  :math:`[`\ int04\ :math:`]`

   **形式 :** int型 (空白不可)

   | **説明 :** 一体励起演算子のタイプを指定する整数。
   | 0: :math:`c_{i\sigma_1}`
   | 1: :math:`c_{i\sigma_1}^{\dagger}`
   | を選択することが出来ます。

-  :math:`[`\ double01\ :math:`]`, :math:`[`\ double02\ :math:`]`

   **形式 :** double型 (空白不可)

   **説明
   :**\ :math:`c_{i\sigma_1}(c_{i\sigma_1}^{\dagger})`\ の実部を\ :math:`[`\ double01\ :math:`]`\ 、虚部を\ :math:`[`\ double02\ :math:`]`\ でそれぞれ指定します。

使用ルール
^^^^^^^^^^

本ファイルを使用するにあたってのルールは以下の通りです。

-  行数固定で読み込みを行う為、ヘッダの省略はできません。

-  成分が重複して指定された場合にはエラー終了します。

-  :math:`[`\ int01\ :math:`]`\ と定義されている一体励起演算子の総数が異なる場合はエラー終了します。

-  :math:`[`\ int02\ :math:`]`-:math:`[`\ int04\ :math:`]`\ を指定する際、範囲外の整数を指定した場合はエラー終了します。


.. raw:: latex

   \newpage
